feat(api/visual): Show 10 pokemons
* Logic to fetch 10 pokemons from the api
* Pokedex container with initial styles created
* Card component with initial styles created
* Show pokemons from api using Pokedex & Card component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,12 @@
         }
     },
     "rules": {
+        "max-len": [
+            "warn",
+            {
+                "code": 120
+            }
+        ],
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": [
             "error"
