refactor(fetchLogic): useFetch hook added
* promises to async/await
* create a reducer for fetch
* handle loading & peding states on fetch
* render error/loading when fetching in components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,10 +26,14 @@
         }
     },
     "rules": {
+        "no-shadow": "off",
+        "@typescript-eslint/no-shadow": [
+            "error"
+        ],
         "max-len": [
             "warn",
             {
-                "code": 125
+                "code": 150
             }
         ],
         "no-use-before-define": "off",
