refactor(titleComponent): Add Title component
* Created new component to show h1
* Update h1 with Title component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         }
     },
     "rules": {
+        "react/require-default-props": "off",
         "no-shadow": "off",
         "@typescript-eslint/no-shadow": [
             "error"
